--- a/source/posts/2012-06-29.md
+++ b/source/posts/2012-06-29.md
@@ -17,9 +17,9 @@
 * [Гугл отчитался о 425M пользователях Gmail](http://techcrunch.com/2012/06/28/gmail-now-has-425-million-users-google-apps-used-by-5-million-businesses-and-66-of-the-top-100-universities/). Я больше верю аналитикам, которые уменьшают эту цифру вдвое. Хотя… Ну, если *аккаунтов*, то может и 425 миллионов. #gmail
 * [А вот, кстати, красивый сайт Yahoo про их почту](http://visualize.yahoo.com/mail/) - я прямо в восторге. #yahoo #mail #adv
 * [Yahoo закрыли проект Koprol](http://www.koprolblog.com/2012/06/bye/), который купили за пару лет до этого. Интересно, вы хоть что-нибудь про этот проект знали? #deadpool #koprol
-* [Старая заметка про то, как рендерит шрифт MacOS, а как Windows]* [Adobe подтвердила, что флеша для Android 4.1 не будет](http://engadget.com/2012/06/28/adobe-confirms-it-wont-support-flash-on-android-4-1/). Фанаты iOS ликуют и говорят, что перестали пользоваться флешом еще в школе! #adobe #flash
+* [Старая заметка про то, как рендерит шрифт MacOS, а как Windows](http://damieng.com/blog/2007/06/13/font-rendering-philosophies-of-windows-and-mac-os-x). Надо сказать что со времени последнего апдейта (2009 год) в Windows рендеринг чуть поправился. #font #design
+* [Adobe подтвердила, что флеша для Android 4.1 не будет](http://engadget.com/2012/06/28/adobe-confirms-it-wont-support-flash-on-android-4-1/). Фанаты iOS ликуют и говорят, что перестали пользоваться флешом еще в школе! #adobe #flash
 * [Боб Мэнсфилд, главный по производству железок Apple, ушел на пенсию](http://www.apple.com/pr/library/2012/06/28Bob-Mansfield-Apples-Senior-Vice-President-of-Hardware-Engineering-to-Retire.html). Жить надо так, чтобы потом тебя *вот так* провожали на пенсию. Завидую, у меня вряд ли так получится. #apple #mansfield
-(http://damieng.com/blog/2007/06/13/font-rendering-philosophies-of-windows-and-mac-os-x). Надо сказать что со времени последнего апдейта (2009 год) в Windows рендеринг чуть поправился. #font #design
 * [Yeah! В jQuery версии 2.0 откажутся от поддержки IE6/7/8](http://blog.jquery.com/2012/06/28/jquery-core-version-1-9-and-beyond/). Так и должно быть, я считаю. Давно пора было! #jquery #html
 * [Зарелизился GRUB 2.0](http://www.thepowerbase.com/2012/06/grub-2-0-officially-released/). Из важного - поддержка большего количества криптованных форматов дисков, а так же поддержка HFS+. #grub #apple
 * [Я вчера таки потратил время на редактор HTML от Adobe, Brackets](https://github.com/adobe/brackets). Ребяты, если вам нужен опенсорсный и фичастый - попробуйте. Самая крутая фишка: нажмите Cmd+E внутри любого html тега - вам тут же откроется вставка с CSS *только для этого тега* со всеми вариантами. Красота. Ну и вообще там много из того, о чем обещают в Light Table. #brackets #adobe #html
