--- a/source/posts/2012-06-29.md
+++ b/source/posts/2012-06-29.md
@@ -1,6 +1,6 @@
 # Традиционная пятничная мешанина
 
-Я решил не обозревать Google I/O. Потому, что у новости по нему я читаю не в отведенный мне для этого проекта час. Ну и, я уверен, вы все фанаты гугла и уже как минимум по разу прочитали про все новинки, объявленный вчера.
+Я решил не обозревать Google I/O. Потому что новости по нему я читаю не в отведённый мне для этого проекта час. Ну и, я уверен, вы все фанаты гугла и уже, как минимум, по разу прочитали про все новинки, объявленные вчера.
 
 ![center](http://chyo.ru/362646366336.png)
 
@@ -9,21 +9,21 @@
 * [Приз за фейл года получает Майкрософт: недавний апдейт автоматически устанавливал людям Skype](http://www.h-online.com/security/news/item/Microsoft-installs-Skype-without-consent-1627601.html), без уведомления администратора. Лучший способ закрыть KPI по дистрибуции скайпа - автоапдейт всех Windows до Win+Skype! :) #skype #microsoft #fail
 * [Cnews: почему MS убили кнопку "Пуск" в Windows 8](http://news.cnet.com/8301-10805_3-57462865-75/why-microsoft-murdered-the-start-button-in-windows-8). Коротко - по нетехническим причинам. #microsoft #start
 * [Кстати, превью нового сайта MicroSoft](http://www.microsoft.com/en-us/preview/) - новый дизайн ничего такой. Metroсексуальный. #metro #design
-* [Майкрософт тоже добавил павилионы на своих картах](http://www.theinquirer.net/inquirer/news/2187935/microsoft-adds-venues-bing-maps-service). В частности торговые центры, аэропорты и тп. Всё круто, только блин, как обычно: возможность для карт есть, а самих карт - нет. #microsoft #maps
-* [RIM отчитались о результатах квартала. Потери составили пол миллиарда долларов](http://www.thestar.com/business/article/1218739--blackberry-maker-rim-announces-518-million-loss-5-000-job-cuts-delays-bb10-to-2013). Blackberry умирает и мне ее почему-то жалко. #bb #rim
-* [Minitel закрывается 30 июня](http://arstechnica.com/gadgets/2012/06/minitel-frances-precursor-to-the-web-to-go-dark-on-june-30/). Уходит целая эра. Вы знали что минител еще лет 5 назад был очень даже работающим инструментом? #minitel #deadpool
-* [Вышел-таки Chrome для iOS](http://itunes.apple.com/ru/app/chrome/id535886823?mt=8). Хороший браузер, напичканый шпионскими штучками от Google. Если их отключить - превращается в просто хороший браузер. Правда из-за количества фич не слишком быстрый. Ну и да, имейте в виду, по сути это просто красивый скин для встроенного в OS вебкита, так же как и другие браузеры для iOS. #google #chrome
+* [Майкрософт тоже добавил павильоны на свои карты](http://www.theinquirer.net/inquirer/news/2187935/microsoft-adds-venues-bing-maps-service). В частности, торговые центры, аэропорты и т. п. Всё круто, только, блин, как обычно: возможность для карт есть, а самих карт - нет. #microsoft #maps
+* [RIM отчитались о результатах квартала. Потери составили полмиллиарда долларов](http://www.thestar.com/business/article/1218739--blackberry-maker-rim-announces-518-million-loss-5-000-job-cuts-delays-bb10-to-2013). Blackberry умирает и мне её почему-то жалко. #bb #rim
+* [Minitel закрывается 30 июня](http://arstechnica.com/gadgets/2012/06/minitel-frances-precursor-to-the-web-to-go-dark-on-june-30/). Уходит целая эра. Вы знали что минител ещё лет 5 назад был очень даже работающим инструментом? #minitel #deadpool
+* [Вышел-таки Chrome для iOS](http://itunes.apple.com/ru/app/chrome/id535886823?mt=8). Хороший браузер, напичканый шпионскими штучками от Google. Если их отключить - превращается в просто хороший браузер. Правда, из-за количества фич не слишком быстрый. Ну и да, имейте в виду, по сути это просто красивый скин для встроенного в OS вебкита, так же как и другие браузеры для iOS. #google #chrome
 * [Вот хороший сравнительный обзор Хрома и Safari для iOS](http://www.imore.com/2012/06/28/google-chrome-ios-compared-safari-ios-video/) от ребят из iMore. #google #chrome
-* [Гугл отчитался о 425M пользователях Gmail](http://techcrunch.com/2012/06/28/gmail-now-has-425-million-users-google-apps-used-by-5-million-businesses-and-66-of-the-top-100-universities/). Я больше верю аналитикам, которые уменьшают эту цифру вдвое. Хотя… Ну, если *аккаунтов*, то может и 425 миллионов. #gmail
+* [Гугл отчитался о 425 миллионах пользователей Gmail](http://techcrunch.com/2012/06/28/gmail-now-has-425-million-users-google-apps-used-by-5-million-businesses-and-66-of-the-top-100-universities/). Я больше верю аналитикам, которые уменьшают эту цифру вдвое. Хотя… Ну, если *аккаунтов*, то, может, и 425 миллионов. #gmail
 * [А вот, кстати, красивый сайт Yahoo про их почту](http://visualize.yahoo.com/mail/) - я прямо в восторге. #yahoo #mail #adv
 * [Yahoo закрыли проект Koprol](http://www.koprolblog.com/2012/06/bye/), который купили за пару лет до этого. Интересно, вы хоть что-нибудь про этот проект знали? #deadpool #koprol
-* [Старая заметка про то, как рендерит шрифт MacOS, а как Windows](http://damieng.com/blog/2007/06/13/font-rendering-philosophies-of-windows-and-mac-os-x). Надо сказать что со времени последнего апдейта (2009 год) в Windows рендеринг чуть поправился. #font #design
+* [Старая заметка про то, как рендерит шрифт MacOS, а как - Windows](http://damieng.com/blog/2007/06/13/font-rendering-philosophies-of-windows-and-mac-os-x). Надо сказать, что со времени последнего апдейта (2009 год) в Windows рендеринг чуть поправился. #font #design
 * [Adobe подтвердила, что флеша для Android 4.1 не будет](http://engadget.com/2012/06/28/adobe-confirms-it-wont-support-flash-on-android-4-1/). Фанаты iOS ликуют и говорят, что перестали пользоваться флешом еще в школе! #adobe #flash
 * [Боб Мэнсфилд, главный по производству железок Apple, ушел на пенсию](http://www.apple.com/pr/library/2012/06/28Bob-Mansfield-Apples-Senior-Vice-President-of-Hardware-Engineering-to-Retire.html). Жить надо так, чтобы потом тебя *вот так* провожали на пенсию. Завидую, у меня вряд ли так получится. #apple #mansfield
 * [Yeah! В jQuery версии 2.0 откажутся от поддержки IE6/7/8](http://blog.jquery.com/2012/06/28/jquery-core-version-1-9-and-beyond/). Так и должно быть, я считаю. Давно пора было! #jquery #html
-* [Зарелизился GRUB 2.0](http://www.thepowerbase.com/2012/06/grub-2-0-officially-released/). Из важного - поддержка большего количества криптованных форматов дисков, а так же поддержка HFS+. #grub #apple
+* [Зарелизился GRUB 2.0](http://www.thepowerbase.com/2012/06/grub-2-0-officially-released/). Из важного - поддержка большего количества криптованных форматов дисков, а также поддержка HFS+. #grub #apple
 * [Я вчера таки потратил время на редактор HTML от Adobe, Brackets](https://github.com/adobe/brackets). Ребяты, если вам нужен опенсорсный и фичастый - попробуйте. Самая крутая фишка: нажмите Cmd+E внутри любого html тега - вам тут же откроется вставка с CSS *только для этого тега* со всеми вариантами. Красота. Ну и вообще там много из того, о чем обещают в Light Table. #brackets #adobe #html
-* [Что нового в Groovy 2](http://www.infoq.com/articles/new-groovy-20). Оставил тут ссылку чтобы почитать перед сном. Сам я к груви совершенно холоден, но для развития… #groovy #jre
+* [Что нового в Groovy 2](http://www.infoq.com/articles/new-groovy-20). Оставил тут ссылку, чтобы почитать перед сном. Сам я к груви совершенно холоден, но для развития… #groovy #jre
 * Два исследователя из Беркли [попробовали найти ответ на вопрос](http://www.infoq.com/news/2012/06/Why-Languages-Succeed-Fail): «Почему одни языки программирования успешны, а другие — нет?». В течение двух лет они опросили 13 тыс. респондентов, но однозначного ответа на поставленый вопрос пока не получили. [via @mikola](http://github.com/mikola)
-* [Simple Made Easy](http://www.infoq.com/presentations/Simple-Made-Easy-QCon-London-2012) — Рич Хики, автор языка Clojure, рассказывает о простоте, почему она важна, как её достичь в дизайне и как распознать её отсутствие в инструментах, языках и библиотеках. Презентация на час. [via @mikola](http://github.com/mikola) #video #clojure
+* [Simple Made Easy](http://www.infoq.com/presentations/Simple-Made-Easy-QCon-London-2012) — Рич Хики, автор языка Clojure, рассказывает о простоте - почему она важна, как её достичь в дизайне и как распознать её отсутствие в инструментах, языках и библиотеках. Презентация на час. [via @mikola](http://github.com/mikola) #video #clojure
 * JetBrains [взяла под свое крыло](http://blogs.jetbrains.com/dotnet/2012/06/jetbrains-and-nemerle/) всю команду разработчиков языка Nemerle. Теперь у JetBrains есть Kotlin для Java и Nemerle для .NET. [via @mikola](http://github.com/mikola)
