--- a/source/posts/2012-07-02.md
+++ b/source/posts/2012-07-02.md
@@ -18,7 +18,7 @@
 
 Однако короткое исследование на глаз показало, что хром медленнее сафари **во всех операциях**. Многие пошли дальше теста на глаз и провели исследование с помощью бенчмарков. Самый утешительный для хрома бенчмарк, SunSpider, показывает что Хром медленнее сафари в среднем в 3.21 раза.
 
-<table><thead><tr><th>результат</th><th>Safari для iOS</th><th>Chrome для iOS</th></tr></thead>
+<table class="table table-striped"><thead><tr><th>результат</th><th>Safari для iOS</th><th>Chrome для iOS</th></tr>
 </thead><tbody>
 <tr><td>3.21x медленнее</td><td>3672.7ms +/- 2.7%</td><td>11777.3ms +/- 1.2%</td></tr></tbody></table>
 
@@ -26,9 +26,9 @@
 
 Почему же это происходит, как Хром может быть медленнее? Разгадка одна, политика Apple.
 
-* Хром для iOS использует штатный движок WebKit. Да, если что, на десктопе хром это тоже просто WebKit, почти без изменений.
-* Javascript интерпретатор в Хроме для iOS такой же как в сафари - JavaScriptCore. Насколько я знаю, Эппл запрещает использовать альтернативные средства работы с javascript в браузерах для своей платформы. Ну, для всех кроме Opera Mini.
-* Более того, для всех «альтернативных» браузеров в JavaScriptCore выключается JIT. Что приводит к резкому падению производительности выполнения JavaScript. В общем, сейчас написать браузер для iOS, который будет быстрее чем Safari невозможно.
+* Хром для iOS использует **штатный движок WebKit**. Да, если что, на десктопе хром это тоже просто WebKit, почти без изменений.
+* Javascript интерпретатор в Хроме для iOS **такой же как в сафари** - JavaScriptCore. Насколько я знаю, **Эппл запрещает** использовать альтернативные средства работы с javascript в браузерах для своей платформы. Ну, для всех кроме Opera Mini.
+* Более того, для всех «альтернативных» браузеров в JavaScriptCore **выключается JIT**. Что приводит к резкому падению производительности выполнения JavaScript. В общем, сейчас написать браузер для iOS, который будет быстрее чем Safari невозможно.
 
 Зачем я всё это написал? Наверное от грусти. Грустно за людей, которые кричат «это быстрое!», ничего не измерив. Грустно за эппл, которая против улучшения пользовательского опыта от своей платформы. Ну, и грустно от Гугла, который под видом Хрома выпустила обычную оболочку для Safari. Кругом обман. 
 Впрочем, для тех кто фанатеет от хрома вне зависимости от скорости его работы - [рецепт «как установить хром браузером по умолчанию»](http://www.imore.com/2012/06/30/browserchooser-tweak-lets-google-chrome-default-iphone-ipad-browser-jailbreak/), правда требуется jailbrake.
