--- a/source/posts/2012-07-02.md
+++ b/source/posts/2012-07-02.md
@@ -37,7 +37,7 @@
 
 ## Для всех
 * [Apple действительно забанили продажи Samsung Galaxy Nexus в Штатах](http://www.slashgear.com/apple-granted-preliminary-sales-ban-of-galaxy-nexus-29236534/). Знаете в какой соц-сети по этому поводу устроили протест? Да, в G+ #lawyers #apple #samsung
-* [cnn: создатели G+ простили не называть проект соцсетью](http://edition.cnn.com/2012/06/29/tech/social-media/google-plus-not-social-network/index.html). Гундотра называет G+ «апдейтом к гуглу». А по-моему это просто блогохостинг. #gplus #google
+* [cnn: создатели G+ просили не называть проект соцсетью](http://edition.cnn.com/2012/06/29/tech/social-media/google-plus-not-social-network/index.html). Гундотра называет G+ «апдейтом к гуглу». А по-моему это просто блогохостинг. #gplus #google
 * В список [11 книг для каждого предпринимателя](http://jasonevanish.com/2012/07/01/11-books-every-entrepreneur-should-read/) внезапно затесался "Алхимик" Коэльо. Странный выбор у Джейсона Эваниша. #books #startup
 * [В Китае заблокировали доступ к Блумбергу и Бизнесуик](http://www.bbc.com/news/technology-18648050?). Так и не смог понять логики для банов. Впрочем у нас не лучше, дважды вчера попал на сайт, заблокированный Билайном. #china #greatwall
 * [VC: Мобильные - вот где сейчас идет рост](http://www.avc.com/a_vc/2012/07/mobile-is-where-the-growth-is.html). Почему никто про это не думает? Большая часть интернета сейчас прирастает мобильным. #mobile
