--- a/source/posts/2012-07-02.md
+++ b/source/posts/2012-07-02.md
@@ -6,61 +6,61 @@
 
 Собственно, самого запуска все ждали минимум с мая, а многие еще раньше. И это самый настоящий Хром. Ну, почти. Давайте пробежимся по ключевым фичам:
 
-* Первое что вас встречает в браузере - окно нового таба. Оно заполнено превьюшками часто посещаемых сайтов или букмарками. Словом, это обычный спид-дайл, который изобрели в Опере. Удобно, хотя и слегка тормозит интерфейс.
-* В хроме (как и на десктопе) единая строка для ввода URL и поисков, т.н. OmniBar. В отличие от сафари, в хроме можно поменять поиск по умолчанию даже на поиск mail.ru. Всего 6 тапов от главной страницы - и вот, у вас новый поиск :) Обычные пользователи сюда, конечно, не доберутся, но сам факт приятен.
+* Первое, что вас встречает в браузере - окно нового таба. Оно заполнено превьюшками часто посещаемых сайтов или букмарками. Словом, это обычный спид-дайл, который изобрели в Опере. Удобно, хотя и слегка тормозит интерфейс.
+* В хроме (как и на десктопе) единая строка для ввода URL и поисков, т. н. OmniBar. В отличие от сафари, в хроме можно поменять поиск по умолчанию даже на поиск mail.ru. Всего 6 тапов от главной страницы - и вот, у вас новый поиск :) Обычные пользователи сюда, конечно, не доберутся, но сам факт приятен.
 * Прямо в строке поиска скрыт голосовой ввод. Обратите внимание, Google неоднократно отказывались выдавать голосовой ввод для сторонних приложений на iOS, объясняя это нежеланием улучшать чужую платформу. Видимо это время прошло, как минимум для своих приложений. К сожалению, голосовой ввод реализован через сервера, а не в оффлайн-режиме, как в свежем Android.
 * Есть условно удобные табы, которых может быть сильно больше трех и все они лежат в памяти. В общем, это тоже приятно отличает Хром от Сафари для iPhone.
-* Синхронизация. По сути после логина в гугл у вас синхронизируется всё. А так же автоматически сохраняются в истории все ваши поиски. Удобство сомнительное, на мобильном я ищу совсем не то, что на десктопе, да и вообще я параноик. 
+* Синхронизация. По сути, после логина в гугл у вас синхронизируется всё. А так же автоматически сохраняются в истории все ваши поиски. Удобство сомнительное, на мобильном я ищу совсем не то, что на десктопе, да и вообще я параноик. 
 * Режим инкогнито, как на взрослых настольных браузерах. Это прекрасная возможность выключить сохранение кук и прочего. Особенно подходит для тех, кто смотрит взрослые сайты.
 * Ну и последнее по порядку, но не по значению - прелоадинг страниц. Работает понятно, гугл всё равно знает по какой ссылке вы скорее всего пойдете. Поэтому он подгружает ссылку, по которой вы вероятнее всего тапнете, еще до того как вы по ней тапнули. Приятно, что есть настройка «подгружать только на WiFi», ощутимо экономящая мой трафик.
 
 В общем, как вы поняли, браузер приятный во всех отношениях и интернет уже заполонили реплики «Невероятно быстрый браузер!», «Я моргнуть не успеваю, как он уже отрисовал страницу», а так же моя любимая - «Сафари на помойку истории, хром победил вебкит!». Быстрота Хрома стала настолько популярным мемом, что в рейтинге бесплатных приложений для iPhone Хром быстро выбрался на первое место.
 
-Однако короткое исследование на глаз показало, что хром медленнее сафари **во всех операциях**. Многие пошли дальше теста на глаз и провели исследование с помощью бенчмарков. Самый утешительный для хрома бенчмарк, SunSpider, показывает что Хром медленнее сафари в среднем в 3.21 раза.
+Однако короткое исследование на глаз показало, что хром медленнее сафари **во всех операциях**. Многие пошли дальше теста на глаз и провели исследование с помощью бенчмарков. Самый утешительный для хрома бенчмарк, SunSpider, показывает что Хром медленнее сафари в среднем в 3,21 раза.
 
 <table class="table table-striped"><thead><tr><th>результат</th><th>Safari для iOS</th><th>Chrome для iOS</th></tr>
 </thead><tbody>
 <tr><td>3.21x медленнее</td><td>3672.7ms +/- 2.7%</td><td>11777.3ms +/- 1.2%</td></tr></tbody></table>
 
-Вот вам [полные результаты бенчмарка SunSpider для телефона Бобука](https://gist.github.com/3029697). Если хотите, можете проверить на своем компьютере сами, [прямо на устройстве, с сайта webkit](http://www.webkit.org/perf/sunspider-0.9.1/sunspider-0.9.1/driver.html).
+Вот вам [полные результаты бенчмарка SunSpider для телефона Бобука](https://gist.github.com/3029697). Если хотите, можете проверить на своём компьютере сами, [прямо на устройстве, с сайта webkit](http://www.webkit.org/perf/sunspider-0.9.1/sunspider-0.9.1/driver.html).
 
-Почему же это происходит, как Хром может быть медленнее? Разгадка одна, политика Apple.
+Почему же это происходит, как Хром может быть медленнее? Разгадка одна - политика Apple.
 
 * Хром для iOS использует **штатный движок WebKit**. Да, если что, на десктопе хром это тоже просто WebKit, почти без изменений.
-* Javascript интерпретатор в Хроме для iOS **такой же как в сафари** - JavaScriptCore. Насколько я знаю, **Эппл запрещает** использовать альтернативные средства работы с javascript в браузерах для своей платформы. Ну, для всех кроме Opera Mini.
-* Более того, для всех «альтернативных» браузеров в JavaScriptCore **выключается JIT**. Что приводит к резкому падению производительности выполнения JavaScript. В общем, сейчас написать браузер для iOS, который будет быстрее чем Safari невозможно.
+* Javascript-интерпретатор в Хроме для iOS **такой же, как в сафари** - JavaScriptCore. Насколько я знаю, **Эппл запрещает** использовать альтернативные средства работы с javascript в браузерах для своей платформы. Ну, для всех, кроме Opera Mini.
+* Более того, для всех «альтернативных» браузеров в JavaScriptCore **выключается JIT**. Что приводит к резкому падению производительности выполнения JavaScript. В общем, сейчас написать браузер для iOS, который будет быстрее чем Safari, невозможно.
 
-Зачем я всё это написал? Наверное от грусти. Грустно за людей, которые кричат «это быстрое!», ничего не измерив. Грустно за эппл, которая против улучшения пользовательского опыта от своей платформы. Ну, и грустно от Гугла, который под видом Хрома выпустила обычную оболочку для Safari. Кругом обман. 
-Впрочем, для тех кто фанатеет от хрома вне зависимости от скорости его работы - [рецепт «как установить хром браузером по умолчанию»](http://www.imore.com/2012/06/30/browserchooser-tweak-lets-google-chrome-default-iphone-ipad-browser-jailbreak/), правда требуется jailbrake.
+Зачем я всё это написал? Наверное от грусти. Грустно за людей, которые кричат «это быстрое!», ничего не измерив. Грустно за эппл, которая против улучшения пользовательского опыта от своей платформы. Ну и грустно от Гугла, который под видом Хрома выпустил обычную оболочку для Safari. Кругом обман. 
+Впрочем, для тех, кто фанатеет от хрома вне зависимости от скорости его работы - [рецепт «как установить хром браузером по умолчанию»](http://www.imore.com/2012/06/30/browserchooser-tweak-lets-google-chrome-default-iphone-ipad-browser-jailbreak/), правда, требуется jailbreak.
 
 -----
 
 ## Для всех
 * [Apple действительно забанили продажи Samsung Galaxy Nexus в Штатах](http://www.slashgear.com/apple-granted-preliminary-sales-ban-of-galaxy-nexus-29236534/). Знаете в какой соц-сети по этому поводу устроили протест? Да, в G+ #lawyers #apple #samsung
-* [cnn: создатели G+ просили не называть проект соцсетью](http://edition.cnn.com/2012/06/29/tech/social-media/google-plus-not-social-network/index.html). Гундотра называет G+ «апдейтом к гуглу». А по-моему это просто блогохостинг. #gplus #google
+* [cnn: создатели G+ просили не называть проект соцсетью](http://edition.cnn.com/2012/06/29/tech/social-media/google-plus-not-social-network/index.html). Гундотра называет G+ «апдейтом к гуглу». А по-моему, это просто блогохостинг. #gplus #google
 * В список [11 книг для каждого предпринимателя](http://jasonevanish.com/2012/07/01/11-books-every-entrepreneur-should-read/) внезапно затесался "Алхимик" Коэльо. Странный выбор у Джейсона Эваниша. #books #startup
 * [В Китае заблокировали доступ к Блумбергу и Бизнесуик](http://www.bbc.com/news/technology-18648050?). Так и не смог понять логики для банов. Впрочем у нас не лучше, дважды вчера попал на сайт, заблокированный Билайном. #china #greatwall
-* [VC: Мобильные - вот где сейчас идет рост](http://www.avc.com/a_vc/2012/07/mobile-is-where-the-growth-is.html). Почему никто про это не думает? Большая часть интернета сейчас прирастает мобильным. #mobile
+* [VC: Мобильные - вот где сейчас идёт рост](http://www.avc.com/a_vc/2012/07/mobile-is-where-the-growth-is.html). Почему никто про это не думает? Большая часть интернета сейчас прирастает мобильным. #mobile
 * [На TNW обзор использования Google Nexus 7 от реального пользователя](http://thenextweb.com/gadgets/2012/07/01/a-nexus-7-tablet-review-from-someone-who-actually-used-it-for-a-few-days/). Как мне и показалось - сейчас Nexus 7 лучший планшет на андроиде по соотношению цена/качество. #nexus7 #android #mobile
 * [Обзор лучших 5 клавиатур для Андроида](http://lifehacker.com/5922522/five-best-android-keyboards) на лайфхакере. Я уверен, что лучшим будет родная клавиатура от Android 4.1. Потому что за предиктивным вводом будущее.
-* [Гугл торжественно, постом в корп.блоге отметил гей-парад в разных частях света](http://googleblog.blogspot.com/2012/06/celebrating-pride-2012.html). Я очень толерантный. Но зачем же об этом в блоге-то кричать?
+* [Гугл торжественно, постом в корп. блоге отметил гей-парад в разных частях света](http://googleblog.blogspot.com/2012/06/celebrating-pride-2012.html). Я очень толерантный. Но зачем же об этом в блоге-то кричать?
 
 ## На грани
 * [Clink - как Bash, но для Windows cmd.exe](http://code.google.com/p/clink/). Не удержался и попробовал - действительно, полное ощущение нормальной шелл от банального cmd.exe. Обязательно качать всем виндузятникам! #cmdexe #win7
-* [Цены на SSD упали вдвое за год](http://arstechnica.com/gadgets/2012/06/why-ssds-cost-half-of-what-they-did-in-2011/), а если бы не фокусима - упали бы еще ниже. Считаю что теперь нет причины покупать что-то, кроме SSD для всех типов устройств. #ssd #desktop #server
-* [Рауль Сингх дает советы, как заниматься своим первым языком программирования](http://www.singhrahul.com/2012/07/learning-your-first-programming.html). Особенно верно, что стоит заниматься не только программированием, но и историей появления языка. #learn #code
+* [Цены на SSD упали вдвое за год](http://arstechnica.com/gadgets/2012/06/why-ssds-cost-half-of-what-they-did-in-2011/), а если бы не фокусима - упали бы еще ниже. Считаю что теперь нет причины покупать что-то, кроме SSD, для всех типов устройств. #ssd #desktop #server
+* [Рауль Сингх даёт советы, как заниматься своим первым языком программирования](http://www.singhrahul.com/2012/07/learning-your-first-programming.html). Особенно верно, что стоит заниматься не только программированием, но и историей появления языка. #learn #code
 * [Прекрасный пример идеального сайта для оформления API - Apiary.io](http://apiary.io/). Гораздо лучше, чем Мэшери, который мне нравился раньше. #api #design
-* [5 css стилей для списков](http://designshack.net/articles/css/5-simple-and-practical-css-list-styles-you-can-copy-and-paste/), мне особенно понравился список с большими цифрами. В такие моменты жалею, что я не дизайнер. #design #css #html
-* [12 инструментов для вебдизайна](http://bashooka.com/freebie/12-useful-web-design-tools/). Нашел для себя парочку новых тулзов, хотя мне они все бесполезны. #design #html #css
-* [Сандовски о том, как выбрать между SproutCore и Cappucino](http://sandofsky.com/blog/desktop-class-applications-in-javascript.html) для богатых веб-приложений. Мне капучино нравится больше, не смотря на алиенский Objective-J. #html #javascript
-* [Дэн Кроста: «Никогда не используйте GUI тулзы для систем контроля версий»](http://late.am/post/2011/09/27/never-use-source-control-guis). Ну, что скажешь, я согласен. Я тоже пользую только консольные тулзы и GitX, для удобства коммитов. #git #cmd #gui
+* [5 css-стилей для списков](http://designshack.net/articles/css/5-simple-and-practical-css-list-styles-you-can-copy-and-paste/), мне особенно понравился список с большими цифрами. В такие моменты жалею, что я не дизайнер. #design #css #html
+* [12 инструментов для вебдизайна](http://bashooka.com/freebie/12-useful-web-design-tools/). Нашёл для себя парочку новых тулзов, хотя мне они все бесполезны. #design #html #css
+* [Сандовски о том, как выбрать между SproutCore и Cappucino](http://sandofsky.com/blog/desktop-class-applications-in-javascript.html) для богатых веб-приложений. Мне капучино нравится больше, несмотря на алиенский Objective-J. #html #javascript
+* [Дэн Кроста: «Никогда не используйте GUI-тулзы для систем контроля версий»](http://late.am/post/2011/09/27/never-use-source-control-guis). Ну, что скажешь, я согласен. Я тоже пользую только консольные тулзы и GitX, для удобства коммитов. #git #cmd #gui
 * Скотт Хансельман разоблачил [малварь, которая прикидывалась антивирусом](http://www.hanselman.com/blog/IfMalwareAuthorsEverLearnHowToSpellWereAllScrewedTheComingHTML5MalwareApocalypse.aspx). [via @mikola](http://github.com/mikola) #security
 * Джеф Сазэрлэнд, один из "отцов" Scrum, предлагает использовать Scrum для обустройства своей жизни и [попросил свою жену Арлин написать об этом](http://scrum.jeffsutherland.com/2012/06/normal-0-false-false-false-en-us-ja-x.html). Удивила фраза в тексте: «Thank God for Scrum!» По-моему, это тот случай, когда у тебя в руках молоток, всё похоже на гвоздь. [via @mikola](http://github.com/mikola)
 
 ## Для гиков
 * [Свежая для меня библиотека компьютерного зрения - CCV](http://libccv.org/). Поигрался с тестами - производительность просто поражает. Положил в закладки, надеюсь воспользоваться в каком-нибудь проекте. #cv #opencv #ccv
 * [Обзор ситуации с FFmpeg/libav](http://blog.pkh.me/p/13-the-ffmpeg-libav-situation.html). Они разошлись 2 года назад, со скандалом, сейчас развиваются параллельно и неравномерно. Мои симпатии, как не странно, на стороне  ffmpeg. #ffmpeg #libav #hate
-* [Оказывается в наушниках для iPhone всего 4 провода - лево/право/земля/контроль](http://unix.stackexchange.com/questions/41954/earphone-remote-in-sound-jack-as-x-input/41989#41989). Интересно было узнать как контроль работает. #hardware
+* [Оказывается, в наушниках для iPhone всего 4 провода - лево/право/земля/контроль](http://unix.stackexchange.com/questions/41954/earphone-remote-in-sound-jack-as-x-input/41989#41989). Интересно было узнать как контроль работает. #hardware
 * [Очень подробное погружение в исходные тексты Quake3](http://fabiensanglard.net/quake3/index.php). Обратите внимание, в части про ботов есть очень крутые ссылки. #quake3 #gamedev
 * [Извращенцы-забавники сделали интранет-чат-сервер из IE6](https://www.getbridge.com/blog/ie6chatserver). Крутая идея - использовать браузер вместо сервера. #javascript #fun
 * [Питоновая библиотека для порт-протокола с Erlang](http://erlport.org/). Я для себя приминения не вижу, но для встраивания питона в эрланг это очевидно лучшее решение. #erlang #python
@@ -69,5 +69,5 @@
 * [библиотека PrefixFree позволяет отказаться от многочисленных CSS браузер-специфичных префиксов](http://coding.smashingmagazine.com/2011/10/12/prefixfree-break-free-from-css-prefix-hell/). В закладки и на заметку. #css #html
 
 ## Разное
-* [Стивен Хокинг о путешествиях во времени, М-теории и внеземной жизни](http://arstechnica.com/science/2012/07/steven-hawking-on-time-travel-m-theory-and-extra-terrestrial-life/). Всё же Хокинг - идеальный гик. Настоящий ученый с неуемной фантазией. Надеюсь, он еще долго нас не покинет. #hawking #scifi #science
+* [Стивен Хокинг о путешествиях во времени, М-теории и внеземной жизни](http://arstechnica.com/science/2012/07/steven-hawking-on-time-travel-m-theory-and-extra-terrestrial-life/). Всё же Хокинг - идеальный гик. Настоящий ученый с неуёмной фантазией. Надеюсь, он ещё долго нас не покинет. #hawking #scifi #science
                                                                               
