пара ошибок поправлена

--- a/source/posts/2012-07-03.md
+++ b/source/posts/2012-07-03.md
@@ -25,16 +25,16 @@
 * [Гугл открыто вступил в конфронтацию с Apple](http://www.bgr.com/2012/07/02/samsung-apple-patent-dispute-google/), подал встречный патентный иск. Война такая война. #google #war #lawyers
 * [Твиттер, вслед за гуглом, вывесил таблицу запросов из Компетентных Органов](http://blog.twitter.com/2012/07/twitter-transparency-report.html) с разбиением по странам. Запросов из России не обнаружено. #law #twitter
 * [Большой пост с сравнением иконок OS X и iOS](http://pxldot.com/post/26373071943/apples-icon-ecosystem-or-carrying-the-quality-all-the). Для меня мораль поста - хорошо, когда стайлгайды описывают даже принцип построения иконок. Дизайнерам, наверное, тесно, но зато очень удобно пользователям. #design #ios #icons
-* [Какой-то невероятный баг в Chrome](http://productforums.google.com/forum/#!topic/websearch/80GcWKQBZhs), людей редиректит на blank.html вместо результатов поиска. Именно такие проблемы приводят к самым большим потерям аудитории, как не странно. #html #chrome
-* [Лучшие браузеры для iOS, обзор от Lifehacker](http://lifehacker.com/5922808/lifehacker-faceoff-the-best-web-browsers-for-iphone-and-ipad). Я для себя решил что оставлю Safari и Chrome. #browser #ios #mobile
+* [Какой-то невероятный баг в Chrome](http://productforums.google.com/forum/#!topic/websearch/80GcWKQBZhs), людей редиректит на blank.html вместо результатов поиска. Именно такие проблемы приводят к самым большим потерям аудитории, как ни странно. #html #chrome
+* [Лучшие браузеры для iOS, обзор от Lifehacker](http://lifehacker.com/5922808/lifehacker-faceoff-the-best-web-browsers-for-iphone-and-ipad). Я для себя решил, что оставлю Safari и Chrome. #browser #ios #mobile
 * [Некто написал автоматического бота, который находит фотографии кредиток и постит их в твиттер](http://mashable.com/2012/07/02/debit-card-photos-online/). Вы бы их сразу же с фото паспорта выкладывали онлайн, а? А то в некоторых местах требуются доп. данные для оплаты :) #security
 * [На Mashable все ещё обсуждают, лидер ли Chrome или у Firefox ещё есть шансы](http://mashable.com/2012/07/02/chrome-vs-firefox/)? Хром набрал 5% за год. Firefox потерял 3%. Так что лидерство - только вопрос времени. Да, за летние месяцы Firefox немножко отыгрался и пьедестал в мире выглядит так: IE, Firefox, Chrome. #browser #desktop
 * [О том же самом более подробно на ARS](http://arstechnica.com/information-technology/2012/07/firefox-fights-back-holds-on-to-second-place-in-world-browser-shares/). IE в три раза больше хрома и фаерфокса. Но мне особенно интересны мобильные слайды - Опера активно теряет свою долю, сафари на мобильном в 3 раза больше хрома. #browser #desktop #mobile
-* [Ребята из Wired поспрашивали девушек, почему в G+ одни мужики](http://www.wired.com/business/2012/07/google-plus-women/)? Много интересных ответов. Думаю самый правильный - потому что в G+ нет фишки за пределами пользовательского интерфейса. #gplus #google
+* [Ребята из Wired поспрашивали девушек, почему в G+ одни мужики](http://www.wired.com/business/2012/07/google-plus-women/)? Много интересных ответов. Думаю, самый правильный - потому что в G+ нет фишки за пределами пользовательского интерфейса. #gplus #google
 
 
 ## На грани
-* Покупатели электронных книг издательства O'Reilly могут теперь [хранить свои книги на Dropbox](http://shop.oreilly.com/category/customer-service/dropbox.do). Для этого войдите в свой аккаунт и включите синхронизацию.  [Капитан](http://lurkmore.to/Капитан_Очевидность) интересуется "почему раньше было по-другому?" [via @hostmaster](http://github.com/hostmaster)
+* Покупатели электронных книг издательства O'Reilly могут теперь [хранить свои книги на Dropbox](http://shop.oreilly.com/category/customer-service/dropbox.do). Для этого войдите в свой аккаунт и включите синхронизацию.  [Капитан](http://lurkmore.to/Капитан_Очевидность) интересуется — "почему раньше было по-другому?" [via @hostmaster](http://github.com/hostmaster)
 * [Подробности про производительность и работу со звуком в Android4.1](http://createdigitalmusic.com/2012/07/android-high-performance-audio-in-4-1-and-what-it-means-plus-libpd-goodness-today/). Интересно, а какой смысл делать работу со звуком low latency на мобильных устройствах? #mobile #android #sound
 * [Официальный клиент VLC для современных андроидофонов](http://venturebeat.com/2012/07/02/vlc-lands-on-android-beta/), пока бета. Неужели это кому-то нужно? VLC для iOS так и не полетел толком, на момент его выхода была уже масса других плейеров. #vlc #mobile #android
 * [10 знаменитых гиков, но не тех, о ком вы подумали](http://www.makeuseof.com/tag/10-famous-geeks-changed-world/). Начали с Тьюринга, а закончили Майклом Хартом. Хорошая подборка для тех, кто не знает авторов многих современных изобретений. #geek #fun
@@ -46,5 +46,3 @@
 * Конрад Ирвин пишет, что [парадигма MVC мертва, пора переходить на MOVE](http://cirw.in/blog/time-to-move-on). Move русскими буквами будет МДВС - Модель, Действие, Вид, Событие. #mvc #coding
 * [Очередной, но полезный, туториал о совместном использовании Bootstrap и SASS](http://www.1stwebdesigner.com/css/build-website-using-twitter-bootstrap-sass-1/). Вообще, пора тут завязывать с туториалами, все они неплохо находятся поисковыми системами. #bootstrap #html #css
 * [Схемы в MongoDB и Node.js](http://slashdot.org/topic/bi/schemas-in-mongodb-with-node-js/). В заголовке сплошной обман, на самом деле там просто mongoose. #javascript #mongo
-
-
